# s2geometry

.github/workflows/: s2_fuzzer-mayhem.yml  sync.yml
mayhem/: CMakeLists.txt  Dockerfile  Mayhemfile  build.sh  s2_fuzzer.cc  s2_fuzzer.mayhemfile  test.sh
mayhem/s2_fuzzer/testsuite/: basic  points  polygon  polygon_holes  polyline
